fixing consultation page

--- a/consultation.html
+++ b/consultation.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Schedule a Free Strategy Session
+permalink: /consultation/
 ---
 <h2>Request a Free Strategy Session</h2>
 <p>Let's talk about how Keller Williams can take your business to new heights.</p>
