--- a/contact-us.html
+++ b/contact-us.html
@@ -16,8 +16,8 @@ perma-link: /contact-us/
   </div>
   <input type="hidden" name="_subject" value="New message from Govig Blog" />
   <input type="text" name="company" placeholder="Company Name" class="full-width">
-  <input type="text" name="name" placeholder="Contact Name" required class="full-width">
-  <input type="email" name="_replyto" placeholder="Email" required class="full-width">
+  <input type="text" name="name" placeholder="*Contact Name" required class="full-width">
+  <input type="email" name="_replyto" placeholder="*Email" required class="full-width">
   <input type="text" name="phone" placeholder="Phone" class="full-width">
   <textarea name="Message" placeholder="Message" class="full-width"></textarea>
   <!-- Cloud cannon settings field -->
