adding referral input to form

--- a/contact-us.html
+++ b/contact-us.html
@@ -19,6 +19,7 @@ perma-link: /contact-us/
   <input type="text" name="name" placeholder="*Contact Name" required class="full-width">
   <input type="email" name="_replyto" placeholder="*Email" required class="full-width">
   <input type="text" name="phone" placeholder="Phone" class="full-width">
+  <input type="text" name="referral" placeholder="How Did You Hear About Us?" class="full-width">
   <textarea name="Message" placeholder="Message" class="full-width"></textarea>
   <!-- Cloud cannon settings field -->
   <div class="hidden">
