--- a/contact-us.html
+++ b/contact-us.html
@@ -18,10 +18,10 @@ perma-link: /contact-us/
   <input type="text" name="company" placeholder="Company Name" class="full-width">
   <input type="text" name="name" placeholder="*Contact Name" required class="full-width">
   <input type="email" name="_replyto" placeholder="*Email" required class="full-width">
-  <input type="text" name="phone" placeholder="Phone" class="full-width">
+  <input type="text" name="phone" placeholder=*"Phone" required class="full-width">
   <textarea name="Message" placeholder="Message" class="full-width"></textarea>
   <span class="form-title">How Did You Hear About Us?</span>
-  <select name="question" data-name="selectbox1">
+  <select name="question" data-name="selectbox1" required>
     <option name="question" value="Blog">Blog</option>
     <option name="question" value="Website">Website</option>
     <option name="question" value="LinkedIn">LinkedIn</option>
