--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@ tags:
 perma-link: /contact-us/
 ---
 
-<form class="contact-form" method="post" action="http://formspree.io/{{site.data.settings.client.email}}">
+<form class="contact-form" method="post" action="http://formspree.io/info@govig.com">
   <span class="form-title">Choose an Industry</span>
   <select name="industry" data-name="selectbox1" required>
     <option name="industry" value="Bio Pharma">Bio Pharma</option>
