--- a/futurity.html
+++ b/futurity.html
@@ -1,10 +1,13 @@
 ---
 layout: default
-tags:
-  - Futurity
 ---
+<div class="fourohfour">
+  <p id="number">404</p>
+  <p>Oh no! That page doesn't exist. That's ok, let's go <a href="/" class="button">Home</a></p>
+</div>
+
 <!-- blog feed -->
-      {% for post in site.tags.["Futurity"] %}
+      <!-- {% for post in site.tags.["Futurity"] %}
 			<div class="row">
 			</div>
 			<div class="row content-container">
@@ -32,5 +35,5 @@ tags:
 				</div>
       </li>
 		</ul>
-</div>
-      {% endfor %}
+</div> -->
+      <!-- {% endfor %} -->
