taking futurity option off form

--- a/contact-us.html
+++ b/contact-us.html
@@ -11,7 +11,7 @@ perma-link: /contact-us/
     <option name="industry" value="Bio Pharma">Bio Pharma</option>
     <option name="industry" value="Building Products">Building Products</option>
     <option name="industry" value="Careers">Careers</option>
-    <option name="industry" value="futurity">Futurity</option>
+    <!-- <option name="industry" value="futurity">Futurity</option> -->
     <option name="industry" value="Health Care">Health Care</option>
   </select>
   <span class="form-title">How Did You Hear About Us?</span>
