--- a/health-care.html
+++ b/health-care.html
@@ -4,7 +4,7 @@ tags:
   - Health Care
 ---
 <!-- blog feed -->
-      {% for post in site.tags.["Health Care"] %}
+      {% for post in site.tags.["Healthcare"] %}
 			<div class="row">
 			</div>
 			<div class="row content-container">
