Updated 'health-care.html' via CloudCannon

--- a/health-care.html
+++ b/health-care.html
@@ -4,7 +4,7 @@ tags:
   - Healthcare
 ---
 <!-- blog feed -->
-      {% for post in site.tags.["Healthcare"] %}
+      {% for post in site.tags.["Health Care"] %}
 			<div class="row">
 			</div>
 			<div class="row content-container">
