Updated 'health-care.html' via CloudCannon

--- a/health-care.html
+++ b/health-care.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 tags:
-  - Healthcare
+  - Health Care
 ---
 <!-- blog feed -->
       {% for post in site.tags.["Health Care"] %}
