health care to healthcare

--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@ perma-link: /contact-us/
     <option name="industry" value="Building Products">Building Products</option>
     <option name="industry" value="Careers">Careers</option>
     <!-- <option name="industry" value="futurity">Futurity</option> -->
-    <option name="industry" value="Health Care">Health Care</option>
+    <option name="industry" value="Healthcare">Healthcare</option>
   </select>
   <span class="form-title">How Did You Hear About Us?</span>
   <select name="heardfrom" data-name="selectbox1" required>
