--- a/health-care.html
+++ b/health-care.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 tags:
-  - Health Care
+  - Healthcare
 ---
 <!-- blog feed -->
-      {% for post in site.tags.["Health Care"] %}
+      {% for post in site.tags.["Healthcare"] %}
 			<div class="row">
 			</div>
 			<div class="row content-container">
