--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@ tags:
    <div class="row selection-container gray-section">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-md-push-6 col-lg-7 col-lg-push-5 selection-box">
 			<a href="{{page.URL}}/health-care"><figure class="effect-lily">
-				<img src="{{site.data.settings.images.selection_image5_path}}" alt="Health Care" />
+				<img src="{{site.data.settings.images.selection_image5_path}}" alt="Healthcare" />
 					<figcaption>
 						<div>
-							<h2>Health Care</h2>
+							<h2>Healthcare</h2>
 							<p>Changes in the senior housing industry have contributed to the current talent shortage the healthcare industry has faced over the past 18 months and will continue to face in the future. Govig Healthcare Group became acutely aware of these changes and have broadened our service to include things like employment branding, talent management strategies, and developing a strong culture. Govig Healthcare group has been in business since 1988, and we work nationwide in order to help as many companies as possible.</p>
 						</div>
 					</figcaption>
@@ -161,7 +161,7 @@ tags:
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-5 col-lg-pull-7 selection-box limit-3">
 			<ul>
-			{% for post in site.tags.["Health Care"] limit: 3 %}
+			{% for post in site.tags.["Healthcare"] limit: 3 %}
 				<li class="leading-article">
 					<a href="{{post.url}}">{{post.title}}</a>
 					<p>{{post.excerpt}}</p>
@@ -172,7 +172,7 @@ tags:
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-5 col-lg-pull-7 selection-box limit-1">
 			<ul>
-			{% for post in site.tags.["Health Care"] limit: 1 %}
+			{% for post in site.tags.["Healthcare"] limit: 1 %}
 				<li class="leading-article">
 					<a href="{{post.url}}">{{post.title}}</a>
 					<p>{{post.excerpt}}</p>
