adding email to list

--- a/contact-us.html
+++ b/contact-us.html
@@ -18,6 +18,7 @@ perma-link: /contact-us/
   <select name="heardfrom" data-name="selectbox1" required>
     <option name="heardfrom" value="Blog">Blog</option>
     <option name="heardfrom" value="Website">Website</option>
+    <option name="heardfrom" value="Email">Email</option>
     <option name="heardfrom" value="LinkedIn">LinkedIn</option>
     <option name="heardfrom" value="Other">Other</option>
   </select>
