--- a/client-testimonials.html
+++ b/client-testimonials.html
@@ -1,4 +1,15 @@
 ---
 layout: default
 ---
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/337872772&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>"Atia, my real estate agent was amazing! She was very friendly and helpful, willing to accommodate me anytime. She made sure she came to my closing and even changed her schedule so she could make it. I will recommend more people to her!"
+
+<h1>Testimonials</h1>
+
+<div class="client-testimonial">
+<!-- add soundcloud iframe here -->
+<p class="testimonial-text">
+<!--quote-->
+</p>
+<p class="testimonial-author">
+<!-- quote author -->
+</p>
+<hr>
