adding name field and changing title

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home Evaluation
+title: Contact Us!
 permalink: /contact-us/
 ---
 <h2>More Constant Commissions</h2>
@@ -17,6 +17,7 @@ Text goes here.Text goes here.Text goes here.Text goes here.Text goes here.Text 
         <p id="thanks"></p>
 <label for="name">Name
 </label>
+<input type="text" name="name">
 <label for="phone">Phone Number
 </label>
 <input type="tel" name="phone">
