fixing post layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         </div>
 				<div class="col-lg-6">
 					{{ post.excerpt | strip_html | prepend: "<p class='excerpt'>" | append: "<p>" | truncate: 160 }}
-						<p class="readlink"><a href="{{post.url}}" class="readmore">Read More</a></p>
+						<p class="readlink"><a href="{{post.url}}" class="readmore">See All Emails</a></p>
 				</div>
       </li>
 		</ul>
